--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,3 +53,10 @@ jobs:
             terraform destroy -auto-approve
           fi
         shell: bash
+
+      - name: Update container image tag to use in ECS
+        run: |
+          cat outputs.dat
+          source outputs.dat
+          curl -L -X PATCH -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $ACCESS_TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/orgs/friends-ce-3-group/actions/variables/LAMBDA_ARN_EMAIL_SERVICE -d '{"name":"LAMBDA_ARN_EMAIL_SERVICE","value":"'$LAMBDAARN'","visibility":"all"}'
+
